--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@ import BtnTheme from "./BtnTheme.astro"
 <div class="navBar__background">
     <nav class="navBar">
         <div class="navBar__container">
-            <BtnTheme client:load/>
+            <BtnTheme/>
         </div>
     </nav>
 </div>
