--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,6 +1,6 @@
 ---
-import FormSignin from "@components/FormSignin.astro";
 import TextLink from "@components/TextLink.astro";
+import Form from "@components/Form.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
@@ -8,9 +8,7 @@ import Layout from "@layouts/Layout.astro";
 
 <h1 class="title">Registrarse</h1>
 
-<div class="background__form background__form-signin">
-    <FormSignin />
-</div>
+<Form type="signin" />
 
 <TextLink href="../" text="¿Ya tienes una cuenta?" textN="Iniciar sesión" />
 
@@ -20,137 +18,5 @@ import Layout from "@layouts/Layout.astro";
     }
     h1 {
         color: #fff;
-    }
-    .background__form {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 300px;
-
-        &.background__form-login {
-            height: 280px;
-        }
-        &.background__form-signin {
-            height: 630px;
-        }
-
-        &::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: repeating-conic-gradient(
-                from var(--a),
-                #0f0,
-                #ff0,
-                #0ff,
-                #f0f,
-                #0ff
-            );
-            border-radius: 10px;
-            animation: rotating 20s linear infinite;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: repeating-conic-gradient(
-                from var(--a),
-                #0f0,
-                #ff0,
-                #0ff,
-                #f0f,
-                #0ff
-            );
-            border-radius: 10px;
-            animation: rotating 20s linear infinite;
-            filter: blur(5px);
-        }
-    }
-
-    /* Validation styles */
-
-    .form__group-wrong {
-        .form__label {
-            color: #f00;
-        }
-        .form__input {
-            border: 2px solid #f00;
-        }
-
-        .form__group-input {
-            .status_icon {
-                color: #f00;
-                opacity: 1;
-            }
-        }
-    }
-    .form__group-correct {
-        .form__label {
-            color: #0f0;
-        }
-        .form__input {
-            border: 2px solid #0f0;
-        }
-        .form__group-input {
-            .status_icon {
-                color: #0f0;
-                opacity: 1;
-            }
-        }
-    }
-    /* Theme mode styles */
-    .light {
-        .title {
-            color: #000;
-        }
-
-        .form {
-            background-color: #efefef;
-            color: #000;
-
-            .form__input {
-                background-color: rgba(200, 200, 200, 100);
-            }
-
-            .background__btn {
-                background-color: #000;
-
-                .backfill__btn {
-                    background-color: #efefef;
-                }
-
-                &:hover .btn {
-                    background-clip: text;
-                    color: transparent;
-                    background-image: linear-gradient(
-                        to right,
-                        #0f0,
-                        #ff0,
-                        #0ff,
-                        #f0f,
-                        #0ff
-                    );
-                }
-
-                .btn {
-                    background: #efefef;
-                    color: #000;
-                }
-            }
-        }
-        .text__link {
-            color: #000;
-        }
-        .btnTheme__box {
-            background: linear-gradient(to left, #ababab, #fefefe);
-
-            .btnTheme {
-                left: 22px;
-                border: 1px solid #fefefe;
-                background-color: #fff;
-            }
-        }
     }
 </style>
