--- a/src/components/BtnColor.astro
+++ b/src/components/BtnColor.astro
@@ -58,8 +58,8 @@ const { text } = Astro.props;
 
         .backfill__btn {
             display: none;
-            height: 90%;
-            width: 98%;
+            height: 36px;
+            width: calc(100% - 4px);
             background-color: #222;
         }
 
@@ -70,10 +70,9 @@ const { text } = Astro.props;
             font-weight: bold;
             display: block;
             z-index: 20;
-            width: 100%;
             border-radius: 4px;
-            height: 90%;
-            width: 98%;
+            height: 36px;
+            width: calc(100% - 4px);
             color: #fff;
             background: #222;
         }
