--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -17,8 +17,15 @@ import "src/styles/form.css";
 			class="form__input"
 			name="password"
 			id="password"
+			required
 		/>
-		<i class="password_icon fa-solid fa-eye-slash"></i>
+		<img
+			class="password_icon icon"
+			src="public/no-view.svg"
+			alt="icono"
+			width="18"
+			height="18"
+		/>
 	</div>
 	<p class="form__text forget-password">
 		<a class="text__link" href="/signin">¿Has olvidado tu contraseña?</a>
@@ -26,3 +33,18 @@ import "src/styles/form.css";
 </div>
 
 <BtnColor text="INGRESAR" />
+<script is:inline>
+	const $form = document.querySelector(".form"),
+		$user = document.getElementById("user"),
+		$password = document.getElementById("password");
+
+	$form.addEventListener("submit", (e) => {
+		e.preventDefault();
+
+		const objectData = {
+			username: $user.value,
+			password: $password.value,
+		};
+		console.log(objectData);
+	});
+</script>
