--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,20 +16,10 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<script>
-			try {
-				const storedTheme = window.localStorage.getItem("theme");
-				if (storedTheme) {
-					document.documentElement.className = storedTheme;
-				}
-			} catch (error) {
-				console.warn("Unable to read theme from localStorage", error);
-			}
-		</script>
 		<title>{title}</title>
 	</head>
 	<body id="body">
-		<Navbar/>
+		<Navbar transition:persist/>
 		<slot />
 	</body>
 </html>
