--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,3 +14,8 @@ import TextLink from "@components/TextLink.astro";
 		textN="Crear cuenta"
 	/>
 </Layout>
+<style>
+	h1{
+		margin-top: 7rem;
+	}
+</style>
