--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,9 +5,8 @@
 body {
     font-family: Arial;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     position: relative;
     height: 100vh;
     margin: 0;
@@ -19,7 +18,7 @@ h1 {
     color: #fff;
 }
 /* Theme mode styles */
-.light {
+html.light {
     #body {
         background-color: #efefef;
     }
