--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -16,4 +16,9 @@ import Layout from "@layouts/Layout.astro";
     body {
         height: 130vh;
     }
+    @media (666px < width) {
+        body {
+            height: 100vh;
+        }
+    }
 </style>
