--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -3,29 +3,18 @@ import FormSignin from "./forms/FormSignin.astro";
 import FormLogin from "./forms/FormLogin.astro";
 
 const { type } = Astro.props;
+
+const backgroundForm =
+    type == "login" ? "background__form-login" : "background__form-signin";
+const typeForm = type == "login" ? "form__login" : "form__signin";
 ---
 
-<div
-    class:list={[
-        "background__form",
-        {
-            "background__form-login": type == "login",
-            "background__form-signin": type == "signin",
-        },
-    ]}
->
-    <form
-        class:list={[
-            "form",
-            {
-                form__login: type == "login",
-                form__signin: type == "signin",
-            },
-        ]}
-    >
+<div class=`background__form ${backgroundForm}`>
+    <form class=`form ${typeForm}`>
         {type == "signin" ? <FormSignin /> : <FormLogin />}
     </form>
 </div>
+
 <style>
     html.light {
         .form {
@@ -58,9 +47,7 @@ const { type } = Astro.props;
             max-width: 400px;
         }
         &.background__form-signin {
-            height: 630px;
-            max-width: 600px;
-
+            height: 750px;
         }
 
         &::before {
@@ -102,17 +89,31 @@ const { type } = Astro.props;
         grid-template-columns: 1fr;
         margin: 0;
         padding: 20px;
+        gap: 20px;
         border-radius: 8px;
         width: calc(100% - 5px);
+        height: calc(100% - 5px);
         z-index: 50;
         color: #efefef;
-        background-color: #222;
-
-        &.form__login {
-            height: 275px;
+        background-color: var(--primary-color);
+    }
+    @media (666px < width) {
+        .background__form {
+            &.background__form-signin {
+                height: 392.5px;
+                max-width: 900px;
+            }
         }
-        &.form__signin {
-            height: 625px;
+        .form {
+            &.form__signin {
+                grid-template-columns: 1fr 1fr;
+                height: 387.5px;
+                gap: 20px;
+
+                .background__btn {
+                    grid-column: span 2;
+                }
+            }
         }
     }
 </style>
@@ -120,10 +121,10 @@ const { type } = Astro.props;
     const showPassword = (icon, inputPassword) => {
         if (inputPassword.type === "password") {
             inputPassword.type = "text";
-            icon.setAttribute("src", "public/view.svg");
+            icon.setAttribute("src", "src/icons/view.svg");
         } else {
             inputPassword.type = "password";
-            icon.setAttribute("src", "public/no-view.svg");
+            icon.setAttribute("src", "src/icons/no-view.svg");
         }
     };
     const $passwordIcons = document.querySelectorAll(".password_icon");
