--- a/src/components/forms/InputSignin.astro
+++ b/src/components/forms/InputSignin.astro
@@ -1,29 +1,19 @@
 ---
+import IconForm from "../IconForm.astro";
+
 const { id, type, text, textError } = Astro.props;
+const idLastname = id == "lastname" && 'label-lastname' 
 ---
 
 <div class="form__group" id={`group__${id}`}>
-    <label class="form__label" for={id}>{text}</label>
+    <label class="form__label" for={id} id={idLastname}>{text}</label>
     <div class="form__group-input">
-        <input type={type} class="form__input" name={id} id={id} />
+        <input type={type} class="form__input" name={id} {id} />
         {
             type == "password" ? (
-                <img
-                    class="icon password_icon"
-                    src="/public/no-view.svg"
-                    alt="icon"
-                    width="18"
-                    height="18"
-                />
+                <IconForm type="no-view" />
             ) : (
-                <img
-                    class="icon status_icon"
-                    id={id+"_svg"}
-                    src="/public/error.svg"
-                    alt="icon"
-                    width="18"
-                    height="18"
-                />
+                <IconForm type="error" id={id + "_svg"}/>
             )
         }
     </div>
