--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,64 +1,27 @@
 ---
-import BtnTheme from "./BtnTheme.astro"
+import BtnTheme from "@components/BtnTheme.astro";
+import BackgroundColors from "@components/BackgroundColors.astro";
 ---
-<div class="navBar__background">
+
+<BackgroundColors type="navBar">
     <nav class="navBar">
         <div class="navBar__container">
-            <BtnTheme/>
+            <BtnTheme />
         </div>
     </nav>
-</div>
+</BackgroundColors>
+
 <style>
-    .navBar__background {
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 55px;
-        z-index: 1000;
-
-        &::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: repeating-conic-gradient(
-                from var(--a),
-                #0f0,
-                #ff0,
-                #0ff,
-                #f0f,
-                #0ff
-            );
-            animation: rotating 20s linear infinite;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: repeating-conic-gradient(
-                from var(--a),
-                #0f0,
-                #ff0,
-                #0ff,
-                #f0f,
-                #0ff
-            );
-            animation: rotating 20s linear infinite;
-            filter: blur(5px);
-        }
-    }
     .navBar {
         position: relative;
         display: flex;
         justify-content: center;
+        align-items: center;
         z-index: 50;
-        margin-bottom: 1rem;
         width: 100%;
         height: 53px;
-        background-color: #222;
+        margin-bottom: 0.1rem;
+        background-color: var(--primary-color);
 
         .navBar__container {
             display: flex;
@@ -66,10 +29,10 @@ import BtnTheme from "./BtnTheme.astro"
             align-items: center;
             position: relative;
             margin: auto;
-            z-index: 50;
             width: 100%;
             max-width: 1000px;
             height: 40px;
+            padding: 10px;
         }
     }
 </style>
