--- a/src/components/BtnColor.astro
+++ b/src/components/BtnColor.astro
@@ -10,14 +10,42 @@ const { text } = Astro.props;
 <style>
     html.light {
         .background__btn {
-            background-color: #222;
+            background-color: var(--primary-color);
 
             .backfill__btn {
-                background-color: #efefef;
+                background-color: var(--secondary-color);
             }
             .btn {
-                background: #efefef;
-                color: #222;
+                background: var(--secondary-color);
+                color: var(--secondary-color-text);
+            }
+        }
+    }
+    body.red{
+        .background__btn{
+            &:hover{
+              border: 3px solid var(--red);
+            }
+            &:hover .backfill__btn{
+                background: repeating-conic-gradient(
+                from var(--a),
+                var(--red-light),
+                var(--red)
+            );
+            }
+        }
+    }
+    body.green{
+        .background__btn{
+            &:hover{
+              border: 3px solid var(--green);
+            }
+            &:hover .backfill__btn{
+                background: repeating-conic-gradient(
+                from var(--a),
+                var(--green-light),
+                var(--green)
+            );
             }
         }
     }
@@ -32,34 +60,29 @@ const { text } = Astro.props;
         width: 90%;
         max-width: 400px;
         height: 40px;
-        background: #fff;
+        background: var(--secondary-color);
 
         &:hover {
-            background: linear-gradient(to right, #0f0, #ff0, #0ff, #f0f);
+            background: var(--secondary-color);
         }
 
         &:hover .backfill__btn {
             display: block;
+            height: 30px;
+
         }
 
         &:hover .btn {
             background-clip: text;
-            color: transparent;
-            background-image: linear-gradient(
-                to right,
-                #0f0,
-                #ff0,
-                #0ff,
-                #f0f,
-                #0ff
-            );
+            color: var(--primary-color-text);
         }
 
         .backfill__btn {
             display: none;
             height: 36px;
+            border-radius: 4px;
             width: calc(100% - 4px);
-            background-color: #222;
+            background-color: var(--primary-color);
         }
 
         .btn {
@@ -69,11 +92,10 @@ const { text } = Astro.props;
             font-weight: bold;
             display: block;
             z-index: 20;
-            border-radius: 4px;
             height: 36px;
             width: calc(100% - 4px);
-            color: #fff;
-            background: #222;
+            color: var(--primary-color-text);
+            background: var(--primary-color);
         }
     }
 </style>
