--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,10 @@ interface Props {
 }
 
 const { title } = Astro.props;
+
+const colorTheme = ["red","green"];
+const randomIndex = Math.floor(Math.random() * colorTheme.length);
+const color = colorTheme[randomIndex]
 ---
 
 <!doctype html>
@@ -15,11 +19,11 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/BrokerLogo.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body id="body">
+	<body id="body" class={color}>
 		<Navbar />
 		<slot />
 	</body>
