--- a/src/components/BtnTheme.astro
+++ b/src/components/BtnTheme.astro
@@ -12,20 +12,21 @@ import IconForm from "./Icon.astro";
         position: relative;
         display: flex;
         align-items: center;
+        justify-self: end;
         user-select: none;
         cursor: pointer;
-        width: 50px;
-        height: 30px;
+        width: 25px;
+        height: 28.5px;
         border-radius: 70px;
         background: linear-gradient(to right, #000, #434343);
         border: 1px solid #434343;
 
         #btnTheme {
-            display: block;
             position: absolute;
             cursor: pointer;
             width: 25px;
             height: 28.5px;
+            padding: 0;
             border-radius: 70px;
             border: 1px solid #434343;
             background-color: #434343;
@@ -41,9 +42,22 @@ import IconForm from "./Icon.astro";
             );
 
             #btnTheme {
-                left: 24px;
                 border: 1px solid var(--secondary-color);
                 background-color: var(--secondary-color);
+            }
+        }
+    }
+    @media (width > 666px) {
+        #btnTheme__box {
+            width: 50px;
+            height: 30px;
+        }
+        #btnTheme{
+            left: 0
+        }
+        html.light {
+            #btnTheme {
+                left: 23px;
             }
         }
     }
