--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -16,6 +16,7 @@ const { type } = Astro.props;
             position: fixed;
             height: 55px;
             width: 100%;
+            min-width: 300px;
             top: 0;
             left: 0;
             z-index: 1000;
