--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Navbar from "@components/Navbar.astro";
+import MenuMobile from "@components/MenuMobile.astro";
 import '../styles/global.css'
+import '@fontsource/russo-one';
 
 interface Props {
 	title: string;
@@ -19,12 +21,13 @@ const color = colorTheme[randomIndex]
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/BrokerLogo.svg" />
+		<link rel="icon" type="image/svg+xml" href="/BrokerLogo.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body id="body" class={color}>
 		<Navbar />
+		<MenuMobile />
 		<slot />
 	</body>
 </html>
