--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,7 @@
     }
 }
 body {
-    font-family: Arial;
+    font-family: 'Russo One', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
