Componentes SVG y Footer añadidos

--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -1,6 +1,6 @@
 ---
 import BtnColor from "../BtnColor.astro";
-import IconForm from "../Icon.astro";
+import IconForm from "../IconForm.astro";
 
 import "src/styles/forms.css";
 ---
