--- a/src/components/forms/InputSignin.astro
+++ b/src/components/forms/InputSignin.astro
@@ -1,5 +1,5 @@
 ---
-import IconForm from "../Icon.astro";
+import IconForm from "../IconForm.astro";
 
 const { id, type, text, textError } = Astro.props;
 const idLastname = id == "lastname" && 'label-lastname' 
