--- a/src/pages/fondo.astro
+++ b/src/pages/fondo.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import TitlesWelcome from "@components/TitlesWelcome.astro";
 ---
 
 <Layout title="BrokerView | Inicio">
     <main>
-        <TitlesWelcome />
+        <h1>Fondo</h1>
     </main>
 </Layout>
 
