--- a/src/components/svg/HouseSVG.astro
+++ b/src/components/svg/HouseSVG.astro
@@ -1,16 +1,13 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
-    ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-    <path
-        d="M576 256c0 18-15 32-32 32h-32v184c0 22-18 40-40 40h-80c-22 0-40-18-40-40v-88c0-18-14-32-32-32h-64c-18 0-32 14-32 32v88c0 22-18 40-40 40h-80c-22 0-40-18-40-40V288H32c-18 0-32-14-32-32 0-9 3-17 10-24L266 8c7-7 15-8 22-8s15 2 21 7l256 225c8 7 12 15 11 24z"
-    ></path>
-</svg>
-<style>
-    svg {
-        fill: var(--secondary-color);
-    }
-    html.light {
-        svg {
-            fill: var(--primary-color);
-        }
-    }
-</style>
+<a href="/home" class="link-page">
+    <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 576 512"
+        width="23"
+        height="23"
+        ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+        <path
+            d="M576 256c0 18-15 32-32 32h-32v184c0 22-18 40-40 40h-80c-22 0-40-18-40-40v-88c0-18-14-32-32-32h-64c-18 0-32 14-32 32v88c0 22-18 40-40 40h-80c-22 0-40-18-40-40V288H32c-18 0-32-14-32-32 0-9 3-17 10-24L266 8c7-7 15-8 22-8s15 2 21 7l256 225c8 7 12 15 11 24z"
+        ></path>
+    </svg>
+    <h4>Inicio</h4>
+</a>
