--- a/src/pages/broker.astro
+++ b/src/pages/broker.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import TitlesWelcome from "@components/TitlesWelcome.astro";
 ---
 
 <Layout title="BrokerView | Inicio">
     <main>
-        <TitlesWelcome />
+        <h1>Broker</h1>
     </main>
 </Layout>
 
@@ -17,11 +16,5 @@ import TitlesWelcome from "@components/TitlesWelcome.astro";
         height: 100vh;
         width: 100%;
         margin: 0;
-    }
-
-    h1,
-    h3 {
-        margin: 0;
-        text-align: center;
     }
 </style>
