--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -6,20 +6,20 @@
     footer {
         display: flex;
         flex-direction: column;
-        width: 100vw;
-        height: 40px;
+        width: 100%;
+        height: 30px;
         margin-top: 3rem;
         top: 100%;
 
         p {
             text-align: center;
-            font-size: 1rem;
+            font-size: .7rem;
             margin: 0;
             color: var(--primary-color-text);
         }
 
         div {
-            width: 100vw;
+            width: 100%;
             height: 15px;
         }
     }
