--- a/src/sections/MenuMobile.astro
+++ b/src/sections/MenuMobile.astro
@@ -1,24 +1,60 @@
-<section id="menu-mobile">
+---
+import ChartSVG from "@components/svg/ChartSVG.astro";
+import HouseSVG from "@components/svg/HouseSVG.astro";
+import PiggySVG from "@components/svg/PiggySVG.astro";
+import UserSVG from "@components/svg/UserSVG.astro";
 
+import "@styles/link-pages-svg.css";
+---
+
+<section id="menu-mobile">
+    <HouseSVG />
+    <ChartSVG />
+    <PiggySVG />
+    <UserSVG />
 </section>
 
 <style>
-    #menu-mobile{
+    #menu-mobile {
         position: absolute;
         display: none;
+        justify-content: start;
+        align-items: start;
+        flex-direction: column;
+        gap: 2rem;
+        padding-top: 2rem;
+        padding-left: 1rem;
         height: 100vh;
-        width: 100vw;
+        width: 50%;
         z-index: 200;
-        opacity: .7;
-        background-color: var(--primary-color);
+        background-color: #232323dd;
 
-        &.appear{
-            display: block;
+        &.appear {
+            display: flex;
+        }
+    }
+    body.red {
+        #menu-mobile {
+            box-shadow: 1px 0px 5px var(--red);
+            border-right: 1px solid var(--red);
+        }
+    }
+    body.green {
+        #menu-mobile {
+            box-shadow: 1px 0px 5px var(--green);
+            border-right: 1px solid var(--green);
+        }
+    }
+    html.light {
+        #menu-mobile {
+            background-color: #efefefdd;
         }
     }
     @media (width > 666px) {
-        #menu-mobile{
-            &.appear{display: none;}
+        #menu-mobile {
+            &.appear {
+                display: none;
+            }
         }
     }
 </style>
