--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,9 +28,8 @@ body {
     font-family: 'Russo One', sans-serif;
     display: flex;
     flex-direction: column;
-    align-items: center;
     position: relative;
-    height: 100vh;
+    height: 100svh;
     min-width: 300px;
     margin: 0;
     margin-top: 55px;
@@ -49,8 +48,7 @@ html.light {
     .navBar {
         background-color: var(--secondary-color);
     }
-
-    .title {
+    h1 {
         color: var(--secondary-color-text);
     }
 }
